# scrapy_test_task

./: README.md  pyproject.toml
test_task/: items.py  pipelines.py  selenium_middleware.py  settings.py
test_task/spiders/: adentz_spider.py  bostad_spider.py  kelm_spider.py
